--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="col-sm-12 col-md-10 col-lg-6">
                     <div class="container py-5">
                         <div class="container-fluid text-light">
-                            <h4 class="mt-5 pt-5">This is me</h4>
+                            <h4 class="">This is me</h4>
                             <h2 class="fw-bold display-2 text-success">UGWU ROSEMARY</h2>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur
@@ -86,6 +86,12 @@
                     </div>
                 </div> -->
             </div>
+        </div>
+    </section>
+    <!-- about -->
+    <section>
+        <div class="container">
+
         </div>
     </section>
 
