--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
     </section>
     <!-- about -->
-    <section class=" min-vh-100 bg-secondary">
+    <section class=" bg-secondary">
         <div class="container mt-5 pt-5">
             <div class="row align-items-center justify-content-center gy-5 pb-5">
                 <div class="col-sm-12 col-md-6 col-lg-6">
@@ -100,10 +100,10 @@
                             administrative roles, seeking to
                             contribute expertise in organizational management,
                             communication, and problem-solving...
+                        </p>
                         <div>
                             <a class="btn btn-outline-light fw-bold " href="./about-me.html">Learn more</a>
                         </div>
-                        </p>
                     </div>
                 </div>
             </div>
@@ -139,13 +139,13 @@
                             <i class="bi bi-envelope-at text-success "></i>
                         </div>
                         <p class="text-italic mx-3 my-3">
-                            janerosie52@gmail.com<br>
+                            <a href="janerosie52@gmail.com">janerosie52@gmail.com</a><br>
                             <em class="text-body-secondary">Send us a queary anytime.</em>
                         </p>
                     </div>
                 </div>
                 <!-- form -->
-                <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="col-sm-12 col-md-12 col-lg-6 px-4">
                     <form class="row g-3 d-flex">
                         <div class="col-lg-6 col-md-12">
                             <div class="mt-1">
@@ -153,16 +153,18 @@
                                     aria-label="First name">
                             </div>
                             <div class="mt-2">
-                                <input type="email" class="form-control py-3" id="inputEmail4" placeholder="Enter email">
+                                <input type="email" class="form-control py-3" id="inputEmail4"
+                                    placeholder="Enter email">
                             </div>
                             <div class="mt-2">
-                                <input type="text" class="form-control py-3" id="inputSubject" placeholder="Enter subject">
+                                <input type="text" class="form-control py-3" id="inputSubject"
+                                    placeholder="Enter subject">
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12">
                             <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
                                 style="height: 200px"></textarea>
-                
+
                         </div>
                     </form>
                 </div>
