added some new features

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </nav>
     <!-- hero page -->
-    <section class="bg-body-tertiary shadow-lg pb-5">
+    <section class="bg-body-tertiary shadow">
         <div class="container  d-none d-lg-block">
             <div class="row align-items-center gy-3">
                 <div class="col-sm-6 col-md-5 col-lg-6">
@@ -55,13 +55,13 @@
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6">
                     <div class="container-fliud text-center mx-4">
-                        <img class="img-fluid h-25" src="./assets/Img/Untitled design.png" alt="">
+                        <img class="img-fluid h-25" src="./assets/Img/Untitled design (1).png" alt="">
                     </div>
                 </div>
             </div>
         </div>
         <!--Mobile screen display  -->
-        <div class="container-fluid d-md-block d-lg-none medium-screen ">
+        <div class="container-fluid d-md-block d-lg-none medium-screen">
             <div class="row justify-content-center align-items-center min-vh-100 pb-5">
                 <div class="col-sm-12 col-md-10 col-lg-6">
                     <div class="container py-5">
@@ -84,7 +84,7 @@
         </div>
     </section>
     <!-- about -->
-    <section class=" bg-secondary">
+    <section class="bg-secondary">
         <div class="container mt-5 pt-5">
             <div class="row align-items-center justify-content-center gy-5 pb-5">
                 <div class="col-sm-12 col-md-6 col-lg-6">
@@ -111,7 +111,7 @@
     </section>
 
     <!-- contact section -->
-    <section class="bg-light pt-5">
+    <section class="bg-light py-5">
         <h2 class="text-center fw-bold text-success">Contact Me</h2>
         <div class="container-fluid pt-3">
             <div class="row justify-content-center align-items-center gy-4">
@@ -171,7 +171,15 @@
             </div>
         </div>
     </section>
-
+    <div class="containerfluid">
+        <div class="">
+                 <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7928.058082327364!2d7.518210336380738!3d6.518007883431292!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1044a51cd26df85f%3A0xb272d4b33a44458f!2sAbakpa%20Nike%20Health%20Cente!5e0!3m2!1sen!2sng!4v1694613802643!5m2!1sen!2sng"
+            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+   
+    </div>
     <!-- project -->
     <section>
         <div class="container-fluid bg-light">
@@ -189,7 +197,9 @@
 
 
 
-
+    <footer class="container-fluid text-light text-center bg-dark">
+        <h5>&copy; Copyright@ 2023 - All Rights Reserved.</h5><br />
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
