added some new files and added content to em

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,85 +34,18 @@
             </div>
         </div>
     </nav>
-    <!-- hero page -->
-    <section class="bg-body-tertiary shadow">
-        <div class="container  d-none d-lg-block">
-            <div class="row align-items-center gy-3">
-                <div class="col-sm-6 col-md-5 col-lg-6">
-                    <div class="container">
-                        <h4>This is me</h4>
-                        <h2 class="fw-bold display-2 text-success">Hi, I'm Jane Rosie</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Magni iusto voluptatum distinctio.
-                        </p>
-                    </div>
-                    <div class="container-fluid">
-                        <a href="#" class="btn btn-outline-success icon-link icon-link-hover">Learn More <i
-                                class="bi bi-arrow-right text-sucess mb-2"></i></a>
-                        <a href="#" class=" btn btn-success px-3">Hire Me</a>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-6">
-                    <div class="container-fliud text-center mx-4">
-                        <img class="img-fluid h-25" src="./assets/Img/Untitled design (1).png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--Mobile screen display  -->
-        <div class="container-fluid d-md-block d-lg-none medium-screen">
-            <div class="row justify-content-center align-items-center min-vh-100 pb-5">
-                <div class="col-sm-12 col-md-10 col-lg-6">
-                    <div class="container py-5">
-                        <div class="container-fluid text-light">
-                            <h4 class="">This is me</h4>
-                            <h2 class="fw-bold display-2 text-success">Hi, I'm Jane Rosie</h2>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Magni iusto voluptatum distinctio.
-                            </p>
-                        </div>
-                        <div class="container-fluid mb-5">
-                            <a href="#" class="btn btn-outline-success icon-link icon-link-hover my-2">Learn More <i
-                                    class="bi bi-arrow-right text-sucess mb-2"></i></a>
-                            <a href="#" class=" btn btn-success px-3 my-2">Hire Me</a>
-                        </div>
-                    </div>
+    <section class="">
+        <div class="container-fluid backg-cont text-center">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-lg-12 col-md-12 text-light py-5">
+                    <h2 class="display-3 fw-bold mt-5 mt-lg-4 mt-sm-5">Contact Me</h2>
                 </div>
             </div>
         </div>
     </section>
-    <!-- about -->
-    <section class="bg-secondary">
-        <div class="container mt-5 pt-5">
-            <div class="row align-items-center justify-content-center gy-5 pb-5">
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <div class="card shadow-light">
-                        <img class="img-fluid w-100 rounded" src="./assets/Img/about-img.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <div class="container text-light text-center">
-                        <h2 class="">About Me</h2>
-                        <p>
-                            Dedicated and skilled professional with experience in
-                            administrative roles, seeking to
-                            contribute expertise in organizational management,
-                            communication, and problem-solving...
-                        </p>
-                        <div>
-                            <a class="btn btn-outline-light fw-bold " href="./about-me.html">Learn more</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- contact section -->
     <section class="bg-light py-5">
-        <h2 class="text-center fw-bold text-success">Contact Me</h2>
+        <!-- <h2 class="text-center fw-bold text-success">Contact Me</h2> -->
         <div class="container-fluid pt-3">
             <div class="row justify-content-center align-items-center gy-4">
                 <div class="col-sm-12 col-md-12 col-lg-4">
@@ -170,23 +104,17 @@
             </div>
         </div>
     </section>
-    <div class="containerfluid">
-        <div class="">
-                 <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7928.058082327364!2d7.518210336380738!3d6.518007883431292!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1044a51cd26df85f%3A0xb272d4b33a44458f!2sAbakpa%20Nike%20Health%20Cente!5e0!3m2!1sen!2sng!4v1694613802643!5m2!1sen!2sng"
-            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <!-- Google map -->
+    <div class="mb-0">
+        <div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7928.058082327364!2d7.518210336380738!3d6.518007883431292!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1044a51cd26df85f%3A0xb272d4b33a44458f!2sAbakpa%20Nike%20Health%20Cente!5e0!3m2!1sen!2sng!4v1694613802643!5m2!1sen!2sng"
+                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-   
     </div>
-    <!-- project -->
-    <!-- <section>
-        <div class="container-fluid bg-light">
-
-        </div>
-    </section> -->
-    <footer class="container-fluid text-light text-center bg-dark py-2">
-        <h5>&copy; Copyright@ 2023 - All Rights Reserved.</h5><br />
+    <footer class="container-fluid text-light text-center bg-dark py-2 mt-0">
+        <h5 class="py-3">&copy; Copyright@ 2023 - All Rights Reserved.</h5><br />
     </footer>
     <!-- The script tag -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
