--- a/project.html
+++ b/project.html
@@ -33,38 +33,18 @@
             </div>
         </div>
     </nav>
-    <!-- end of nav bar -->
     <section class="">
         <div class="container-fluid backg text-center">
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-12 col-md-12 text-light py-5">
-                      <h2 class="display-3 fw-bold mt-5 mt-lg-4 mt-sm-5">About Me</h2>
+                      <h2 class="display-3 fw-bold mt-5 mt-lg-4 mt-sm-5">Projects</h2>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="mt-5 ">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <img class="img-fluid w-50"
-                        src="./assets/Img/WhatsApp_Image_2023-09-12_at_4.33.09_PM-removebg-preview.png" alt="">
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <div class="container">
-                        <h2>About Me</h2>
-                        <p>
-                            Dedicated and skilled professional with experience in
-                            administrative roles, seeking to
-                            contribute expertise in organizational management,
-                            communication, and problem-solving.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
+
 
 
 
