--- a/about-me.html
+++ b/about-me.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,7 +39,7 @@
         <div class="container-fluid backg text-center">
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-12 col-md-12 text-light py-5">
-                      <h2 class="display-3 fw-bold mt-5 mt-lg-4 mt-sm-5">About Me</h2>
+                    <h2 class="display-3 fw-bold mt-5 mt-lg-4 mt-sm-5">About Me</h2>
                 </div>
             </div>
         </div>
@@ -46,21 +47,24 @@
 
     <section class="mt-5 ">
         <div class="container">
-            <div class="row align-items-center justify-content-center">
+            <div class="row justify-content-center align-items-center gy-5 py-5">
                 <div class="col-sm-12 col-md-6 col-lg-6">
-                    <img class="img-fluid w-50"
-                        src="./assets/Img/WhatsApp_Image_2023-09-12_at_4.33.09_PM-removebg-preview.png" alt="">
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <div class="container">
-                        <h2>About Me</h2>
+                    <div class="container-fluid bg-body-tertiary rounded p-4">
+                        <h2 class="text-center">About Me</h2>
                         <p>
-                            Dedicated and skilled professional with experience in
-                            administrative roles, seeking to
-                            contribute expertise in organizational management,
-                            communication, and problem-solving.
+                            I am a highly organized and detail-oriented professional with extensive experience in
+                            administrative and secretarial roles, excelling in overseeing sales, payments, and
+                            addressing student needs in an educational environment. My proficiency in computer
+                            applications and industrial training in analytical techniques reflects my commitment to
+                            continuous learning. Currently pursuing certification in accountancy, my diverse educational
+                            background in Education Management, Agriculture, and Applied Biochemistry underscores my
+                            adaptability and eagerness to contribute effectively to new challenges.
                         </p>
                     </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-6">
+                    <img class="img-fluid w-50 d-block mx-auto"
+                        src="./assets/Img/WhatsApp_Image_2023-09-12_at_4.33.09_PM-removebg-preview.png" alt="">
                 </div>
             </div>
         </div>
