--- a/contact.html
+++ b/contact.html
@@ -105,16 +105,16 @@
         </div>
     </section>
     <!-- Google map -->
-    <div class="mb-0">
-        <div>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7928.058082327364!2d7.518210336380738!3d6.518007883431292!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1044a51cd26df85f%3A0xb272d4b33a44458f!2sAbakpa%20Nike%20Health%20Cente!5e0!3m2!1sen!2sng!4v1694613802643!5m2!1sen!2sng"
-                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+    <div>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7928.058082327364!2d7.518210336380738!3d6.518007883431292!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1044a51cd26df85f%3A0xb272d4b33a44458f!2sAbakpa%20Nike%20Health%20Cente!5e0!3m2!1sen!2sng!4v1694613802643!5m2!1sen!2sng"
+            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
     </div>
-    <footer class="container-fluid text-light text-center bg-dark py-2 mt-0">
-        <h5 class="py-3">&copy; Copyright@ 2023 - All Rights Reserved.</h5><br />
+
+    <footer class="container-fluid text-light text-center bg-dark">
+        <h5 class="pt-5">&copy; Copyright@ 2023 - All Rights Reserved.</h5><br />
     </footer>
     <!-- The script tag -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
