made canges to the file and added a resume file

--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="./about-me.html">About</a>
                     <a class="nav-link" href="./project.html">Projects</a>
                     <a class="nav-link" href="./contact.html">Contact</a>
-                    <a class="nav-link" href="./blog.html">Blog</a>
+                    <a class="nav-link disabled" href="./blog.html" aria-disabled="true">Blog</a>
                 </div>
             </div>
         </div>
