--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,9 @@
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     <a class="nav-link" href="./about-me.html">About</a>
-                    <a class="nav-link" href="./project.html">Projects</a>
                     <a class="nav-link" href="./contact.html">Contact</a>
-                    <a class="nav-link" href="./blog.html">Blog</a>
+                    <a class="nav-link disabled" href="./project.html" aria-disabled="true">Projects</a>
+                    <a class="nav-link disabled" aria-disabled="true" href="./blog.html">Blog</a>
                 </div>
             </div>
         </div>
