--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     <a class="nav-link" href="./about-me.html">About</a>
-                    <a class="nav-link" href="./project.html">Projects</a>
                     <a class="nav-link" href="./contact.html">Contact</a>
-                    <a class="nav-link" href="./blog.html">Blog</a>
+                    <a class="nav-link disabled" href="./project.html" aria-disabled="true">Projects</a>
+                    <a class="nav-link disabled" aria-disabled="true" href="./blog.html">Blog</a>
                 </div>
             </div>
         </div>
@@ -54,7 +54,7 @@
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6">
                     <div class="container-fliud text-center mx-4">
-                        <img class="img-fluid h-25" src="./assets/Img/Untitled design (1).png" alt="">
+                        <img class="img-fluid h-25" src="./assets/Img/Hero-bg.png" alt="">
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                             </p>
                         </div>
                         <div class="container-fluid mb-5">
-                            <a href="#" class="btn btn-outline-success icon-link icon-link-hover my-2">Learn More <i
+                            <a href="./about-me.html" class="btn btn-outline-success icon-link icon-link-hover my-2">Learn More <i
                                     class="bi bi-arrow-right text-sucess mb-2"></i></a>
                             <a href="#" class=" btn btn-success px-3 my-2">Hire Me</a>
                         </div>
