--- a/about-me.html
+++ b/about-me.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 </head>
 
-<body class="bg-secondary">
+<body class="">
     <!-- the header section -->
     <nav class="navbar navbar-expand-lg sticky-top bg-light">
         <div class="container">
@@ -27,9 +27,9 @@
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     <a class="nav-link" href="./about-me.html">About</a>
-                    <a class="nav-link" href="./project.html">Projects</a>
                     <a class="nav-link" href="./contact.html">Contact</a>
-                    <a class="nav-link" href="./blog.html">Blog</a>
+                    <a class="nav-link disabled" href="./project.html" aria-disabled="true">Projects</a>
+                    <a class="nav-link disabled" aria-disabled="true" href="./blog.html">Blog</a>
                 </div>
             </div>
         </div>
@@ -45,11 +45,11 @@
         </div>
     </section>
 
-    <section class="mt-5 ">
+    <section class="mt-5 gray">
         <div class="container">
             <div class="row justify-content-center align-items-center gy-5 py-5">
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <div class="container-fluid bg-body-tertiary rounded p-4">
+                <div class="col-sm-12 col-md-12 col-lg-6">
+                    <div class="container-fluid bg-body-tertiary rounded p-4 mt-3">
                         <h2 class="text-center">About Me</h2>
                         <p>
                             I am a highly organized and detail-oriented professional with extensive experience in
@@ -62,9 +62,13 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <img class="img-fluid w-50 d-block mx-auto"
-                        src="./assets/Img/WhatsApp_Image_2023-09-12_at_4.33.09_PM-removebg-preview.png" alt="">
+                <div class="col-sm-12 col-md-6 col-lg-6 d-none d-lg-block">
+                    <img class="img-fluid w-50 d-block mx-auto" src="./assets/Img/about me.png" alt="">
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-6 d-md-bloc d-lg-none">
+                    <div class="card">
+                        <img class="img-fluid w-50 d-block mx-auto" src="./assets/Img/about me.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
