made modiffications to the web page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <!-- google font -->
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@800&family=Heebo:wght@500&family=Rubik+Iso&family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
     <!-- Bootstrap icon CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 </head>
@@ -42,14 +44,16 @@
                         <h4>This is me</h4>
                         <h2 class="fw-bold display-2 text-success">Hi, I'm Jane Rosie</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Magni iusto voluptatum distinctio.
+                            A Scientist and Explorer
+                            Dedicated and skilled professional with experience in administrative roles, organizational
+                            management,
+                            communication, and problem-solving.
                         </p>
                     </div>
                     <div class="container-fluid">
-                        <a href="#" class="btn btn-outline-success icon-link icon-link-hover">Learn More <i
+                        <a href="./about-me.html" class="btn btn-outline-success icon-link icon-link-hover">Learn More <i
                                 class="bi bi-arrow-right text-sucess mb-2"></i></a>
-                        <a href="#" class=" btn btn-success px-3">Hire Me</a>
+                        <a href="./resume.html" class=" btn btn-success px-3">Hire Me</a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6">
@@ -68,14 +72,17 @@
                             <h4 class="">This is me</h4>
                             <h2 class="fw-bold display-2 text-success">Hi, I'm Jane Rosie</h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Magni iusto voluptatum distinctio.
+                                A Scientist and Explorer
+                                Dedicated and skilled professional with experience in administrative roles,
+                                organizational management,
+                                communication, and problem-solving.
                             </p>
                         </div>
                         <div class="container-fluid mb-5">
-                            <a href="./about-me.html" class="btn btn-outline-success icon-link icon-link-hover my-2">Learn More <i
+                            <a href="./about-me.html"
+                                class="btn btn-outline-success icon-link icon-link-hover my-2">Learn More <i
                                     class="bi bi-arrow-right text-sucess mb-2"></i></a>
-                            <a href="#" class=" btn btn-success px-3 my-2">Hire Me</a>
+                            <a href="./resume.html" class=" btn btn-success px-3 my-2">Hire Me</a>
                         </div>
                     </div>
                 </div>
@@ -172,12 +179,12 @@
     </section>
     <div class="containerfluid">
         <div class="">
-                 <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7928.058082327364!2d7.518210336380738!3d6.518007883431292!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1044a51cd26df85f%3A0xb272d4b33a44458f!2sAbakpa%20Nike%20Health%20Cente!5e0!3m2!1sen!2sng!4v1694613802643!5m2!1sen!2sng"
-            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7928.058082327364!2d7.518210336380738!3d6.518007883431292!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1044a51cd26df85f%3A0xb272d4b33a44458f!2sAbakpa%20Nike%20Health%20Cente!5e0!3m2!1sen!2sng!4v1694613802643!5m2!1sen!2sng"
+                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-   
+
     </div>
     <!-- project -->
     <!-- <section>
