--- a/resume.html
+++ b/resume.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <!-- google font -->
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@800&family=Heebo:wght@500&family=Rubik+Iso&family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
     <!-- Bootstrap icon CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 </head>
@@ -36,6 +37,7 @@
     </nav>
     <!--  end of navbar-->
     <section>
+        <!-- experience section -->
         <div class="container-fluid pt-5">
             <h2 class="text-center display-3 fw-bold py-3 text-success">Resume</h2>
             <div class="container d-flex justify-content-around py-3">
@@ -152,7 +154,7 @@
                                     <li>Biology</li>
                                     <li>Chemistry and</li>
                                     <li>Physics.</li>
-
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -160,6 +162,7 @@
             </div>
         </div>
     </section>
+    <!-- Skill section -->
 
     <footer class="container-fluid text-light text-center bg-dark py-2">
         <h5>&copy; Copyright@ 2023 - All Rights Reserved.</h5><br />
