--- a/project.html
+++ b/project.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <!-- google font -->
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@800&family=Heebo:wght@500&family=Rubik+Iso&family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
     <!-- Bootstrap icon CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 </head>
