--- a/about-me.html
+++ b/about-me.html
@@ -68,14 +68,246 @@
                 <div class="col-sm-12 col-md-6 col-lg-6 d-none d-lg-block">
                     <img class="img-fluid w-50 d-block mx-auto" src="./assets/Img/about me.png" alt="">
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-6 d-md-bloc d-lg-none">
+                <!--Mobile display -->
+                <!-- <div class="col-sm-12 col-md-12 col-lg-6 d-md-bloc d-lg-none">
                     <div class="card">
                         <img class="img-fluid w-50 d-block mx-auto" src="./assets/Img/about me.png" alt="">
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
+        <!--  end of navbar-->
+        <section>
+            <!-- experience section -->
+            <div class="container-fluid pt-5">
+                <h2 class="text-center display-3 fw-bold py-3 text-success">Resume</h2>
+                <div class="container d-flex justify-content-around py-3">
+                    <a href="#" class="btn btn-lg  btn-success">Experience</a>
+                    <a href="./download/RoseMary CV.pdf" download="RoseMary CV.pdf" class="btn btn-lg  btn-success"><i class="bi bi-download"></i> DOWNLOAD CV</a>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 py-3">
+                        <div class="card rounded-3 shadow p-5">
+                            <div class="row justify-content-center align-items-center gx-5 gy-4">
+                                <div class="col-lg-3 col-md-6 rounded bg-sec text-success text-center px-1">
+                                    <p class="fs-4 text-success fw-bold pt-2">
+                                        2017 - Present
+                                    </p>
+                                    <h6 class="text-success">✓ Bookshop Assistant:
+                                    </h6>
+                                    <p class="p-2 text-success">
+                                        Godfrey Okoye University and its Group of Institutions.
+                                    </p>
+                                </div>
+                                <div class="col-lg-8 col-md-6 text-wrap">
+                                    <ul>
+                                        <li> Overseeing sales of inventory in the school bookshop.</li>
+                                        <li> Coordinating payments by cash and electronic transfers.</li>
+                                        <li> Addressing student needs for reading/writing materials and daily provisions.
+                                        </li>
+                                        <li> Invoicing and maintaining payment records.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 py-3">
+                        <div class="card rounded-3 shadow p-5">
+                            <div class="row justify-content-center align-items-center gx-5 gy-4">
+                                <div class="col-lg-3 col-md-6 rounded bg-sec text-success text-center px-1">
+                                    <p class="fs-4 text-success fw-bold pt-2">
+                                        2017 - Present
+                                    </p>
+                                    <h6>✓ Receptionist</h6>
+                                    <p class="text-success p-2">
+                                        Godfrey Okoye University and its Group of Institutions.
+                                    </p>
+                                </div>
+                                <div class="col-lg-8 col-md-6">
+                                    <p>
+                                    <ul>
+                                        <li>Addressing student needs for reading/writing materials</li>
+                                        <li>Facilitating communication between management and parents.</li>
+                                        <li>Managing purchases and liaising with suppliers.</li>
+                                        <li>Managing the admission process for new entrants.</li>
+                                        <li>Handlingfeedback,concerns,andcomplaints,ensuringproperresolution.</li>
+                                        <li>Collaborating with management to develop a new prospectus.</li>
+                                        <li>Distributing students' holiday performance programs.</li>
+                                        <li>Handling high volumes of inbound and outbound calls.</li>
+                                        <li>Managing outbound advertisements.
+                                    </ul>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 py-3">
+                        <div class="card rounded-3 shadow p-5">
+                            <div class="row justify-content-center align-items-center gx-5 gy-4">
+                                <div class="col-lg-3 col-md-6 rounded bg-sec text-success text-center px-1">
+                                    <p class="fs-4 text-success fw-bold pt-2">
+                                        2017 - Present
+                                    </p>
+                                    <h6>✓Classroom Teacher (Chemistry and Basic Science):</h6>
+                                    <p class="p-2">
+                                        Godfrey Okoye University and its Group of Institutions.
+                                    </p>
+                                </div>
+                                <div class="col-lg-8 col-md-6">
+                                    <ul>
+                                        <li>Received 85% positive feedback from parents of tutoring students.</li>
+                                        <li>Implemented a series of activities-based learning programs, which resulted in an
+                                            80% increase in student interest in regular lessons.</li>
+                                        <li>Used tests, quizzes, and other assignments to gauge students’ learning and
+                                            increased performance by 30% better on standardized tests than the school
+                                            average.</li>
+                                        <li>Enforced rules of behavior to drive social development and maintain positive
+                                            interactions.</li>
+                                        <li>Reinvented the lesson planning module by incorporating practicals</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 py-3">
+                        <div class="card rounded-3 shadow p-5">
+                            <div class="row justify-content-center align-items-center gx-5 gy-4">
+                                <div class="col-lg-3 col-md-6 rounded bg-sec text-success text-center px-1">
+                                    <p class="fs-4 text-success fw-bold pt-2">
+                                        2017 - Present
+                                    </p>
+                                    <h6>✓ Community Secondary School, Ejure, Ofante, Kogi State.
+                                        NYSC Classroom Teacher for</h6>
+                                    <p class="p-2">
+                                        Godfrey Okoye University and its Group of Institutions.
+                                    </p>
+                                </div>
+                                <div class="col-lg-8 col-md-6">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam odio similique molestias
+                                    sit omnis delectus officia. Incidunt, minus a.
+                                    <ul>
+                                        <li>Biology</li>
+                                        <li>Chemistry and</li>
+                                        <li>Physics.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Skill section -->
+        <section class="mt-5 pt-3">
+            <h2 class="text-success text-center fw-bold">Skills</h2>
+            <div class="container pb-5">
+                <div class="row align-items-center justify-content-center">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="d-flex justify-content-around">
+                            <p class="mb-0 mt-5 fw-bold">
+                                Administrative/secretarial tasks<!-- PA, and .-->
+                            </p>
+                            <p class="pt-5 mb-0 text-success fw-bold">
+                                95%
+                            </p>
+                        </div>
+                        <div class="progress mt-4" role="progressbar" aria-label="Success example" aria-valuenow="95"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar bg-success fs-3 py-5" style="width: 95%">95%</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="d-flex justify-content-around">
+                            <p class="mb-0 mt-5 fw-bold">
+                                Communication skills written and verbal<!-- PA, and .-->
+                            </p>
+                            <p class="pt-5 mb-0 text-success fw-bold">
+                                85%
+                            </p>
+                        </div>
+                        <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="85"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar bg-success fs-3 py-5" style="width: 85%">85%</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="d-flex justify-content-around">
+                            <p class="mb-0 mt-5 fw-bold">
+                                Computers and Microsoft Office suite.<!-- PA, and .-->
+                            </p>
+                            <p class="pt-5 mb-0 text-success fw-bold">
+                                80%
+                            </p>
+                        </div>
+                        <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="80"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar bg-success fs-3 py-5" style="width: 80%">80%</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="d-flex justify-content-around">
+                            <p class="mb-0 mt-5 fw-bold">
+                                Industrial training in Proximate analysis, Water analysis, and Bio-ethanol
+                                extraction<!-- PA, and .-->
+                            </p>
+                            <p class="pt-5 mb-0 text-success fw-bold">
+                                90%
+                            </p>
+                        </div>
+                        <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="90"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar bg-success fs-3 py-5 text-success" style="width: 90%">90%</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    
+        <!-- education -->
+        <section>
+            <div class="container-fluid">
+                <h2 class="text-success text-center fw-bold">Education</h2>
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 py-3">
+                        <div class="card rounded-3 shadow p-5">
+                            <div class="row justify-content-center align-items-center gx-5 gy-4">
+                                <div class="col-lg-3 col-md-6 rounded bg-sec text-light text-center px-1">
+                                    <p class="fs-4 text-success fw-bold pt-2">
+                                        (B.Sc) in Education <br>(2021).
+                                    </p>
+                                    <p class="fs-4 text-success fw-bold pt-2">
+                                        (B.Sc) in Applied Biochemistry (2014).
+                                    </p>
+                                    <p class="fs-4 text-success fw-bold pt-2">
+                                        (SSCE) 2006.
+                                    </p>
+                                </div>
+                                <div class="col-lg-8 col-md-6">
+                                    <ul>
+                                        <li>Bachelor of Science(B.Sc)in Education (2021): Enugu State University of Science
+                                            and Technology (ESUT).
+                                        </li>
+                                        <li>Bachelor of Science(B.Sc) in Applied Biochemistry (2014): Enugu State University
+                                            of Science and Technology (ESUT).
+                                            .</li>
+                                        <li> Senior School Certificate (SSCE) 2006: Isiuzo Secondary School, Ikem, Neke.
+                                        </li>
+    
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
