mademodifications to the resume file

--- a/resume.html
+++ b/resume.html
@@ -44,7 +44,7 @@
             <h2 class="text-center display-3 fw-bold py-3 text-success">Resume</h2>
             <div class="container d-flex justify-content-around py-3">
                 <a href="#" class="btn btn-lg  btn-success">Experience</a>
-                <a href="./download/RoseMary CV.pdf" download="RoseMary CV.pdf" class="btn btn-lg  btn-success"><i class="bi bi-download"></i> DOWNLOAD CV</a>
+                <a href="./download/RoseMary CV.pdf" download="RoseMary CV.pdf" class="btn btn-lg  btn-success fw-bolder"><i class="bi bi-download"></i> DOWNLOAD CV</a>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-8 py-3">
