--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Jane Rosie-Portfolio</title>
     <!-- custom css link -->
     <link rel="stylesheet" href="main.css">
     <!-- Bootstrap CSS CDN -->
@@ -23,7 +23,9 @@
     <!-- the header section -->
     <nav class="navbar navbar-expand-lg sticky-top bg-light">
         <div class="container">
-            <a class="navbar-brand" href="./index.html">logo</a>
+            <a class="navbar-brand" href="./index.html">
+                <img class="img-fluid" src="./assets/Img/Rosie logo.png" width="50" height="30" alt="logo">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -43,7 +45,7 @@
     <section class="bg-body-tertiary shadow">
         <div class="container  d-none d-lg-block">
             <div class="row align-items-center gy-3">
-                <div class="col-sm-6 col-md-5 col-lg-6" data-aos="fade-right"  data-aos-duration="3000">
+                <div class="col-sm-6 col-md-5 col-lg-6" data-aos="fade-right" data-aos-duration="3000">
                     <div class="container">
                         <h4>This is me</h4>
                         <h2 class="fw-bold display-2 text-success">Hi, I'm Jane Rosie</h2>
@@ -60,7 +62,7 @@
                         <a href="./resume.html" class=" btn btn-success px-3">Hire Me</a>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade-left"  data-aos-duration="3000">
+                <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade-left" data-aos-duration="3000">
                     <div class="container-fliud text-center mx-4">
                         <img class="img-fluid h-25" src="./assets/Img/Hero-bg.png" alt="">
                     </div>
@@ -113,6 +115,34 @@
                         </p>
                         <div>
                             <a class="btn btn-outline-light fw-bold " href="./about-me.html">Learn more</a>
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn btn-outline-light fw-bold" data-toggle="modal"
+                                data-target="#exampleModalLong">
+                                Projects
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog"
+                                aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            ...
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-primary">Save changes</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -123,7 +153,8 @@
     <!-- contact section -->
     <section class="bg-light py-5">
         <h2 class="text-center fw-bold text-success">Contact Me</h2>
-        <div class="container-fluid pt-3" data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement="center-bottom">
+        <div class="container-fluid pt-3" data-aos="zoom-in" data-aos-duration="3000"
+            data-aos-anchor-placement="center-bottom">
             <div class="row justify-content-center align-items-center gy-4">
                 <div class="col-sm-12 col-md-12 col-lg-4">
                     <div class="d-flex justify-content-center">
@@ -174,9 +205,9 @@
                         <div class="col-lg-6 col-md-12">
                             <div class="container">
                                 <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
-                                style="height: 200px"></textarea>
+                                    style="height: 200px"></textarea>
                             </div>
-                            
+
                             <div class="container my-3 text-center">
                                 <a class="btn btn-success ms-auto px-4" href="#">Submit</a>
                             </div>
@@ -213,12 +244,12 @@
         integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
         crossorigin="anonymous"></script>
 
-        <!-- AOS SCRIPT -->
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- AOS SCRIPT -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-        <script>
-            AOS.init();
-          </script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
