--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,9 @@
     <!-- the header section -->
     <nav class="navbar navbar-expand-lg sticky-top bg-light">
         <div class="container">
-            <a class="navbar-brand" href="./index.html">logo</a>
+            <a class="navbar-brand" href="./index.html">
+                <img class="img-fluid" src="./assets/Img/Rosie logo.png" width="50" height="30" alt="logo">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
