--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@
                 <div class="col-lg-8 py-3">
                     <div class="card rounded-3 shadow p-5">
                         <div class="row justify-content-center align-items-center gx-5 gy-4">
-                            <div class="col-lg-3 col-md-6 rounded bg-sec text-success text-center px-1">
+                            <div class="col-lg-4 col-md-6 rounded bg-sec text-success text-center px-1">
                                 <p class="fs-4 text-success fw-bold pt-2">
                                     2017 - Present
                                 </p>
@@ -77,7 +77,7 @@
                 <div class="col-lg-8 py-3">
                     <div class="card rounded-3 shadow p-5">
                         <div class="row justify-content-center align-items-center gx-5 gy-4">
-                            <div class="col-lg-3 col-md-6 rounded bg-sec text-success text-center px-1">
+                            <div class="col-lg-4 col-md-6 rounded bg-sec text-success text-center px-1">
                                 <p class="fs-4 text-success fw-bold pt-2">
                                     2017 - Present
                                 </p>
@@ -109,8 +109,8 @@
                 <div class="col-lg-8 py-3">
                     <div class="card rounded-3 shadow p-5">
                         <div class="row justify-content-center align-items-center gx-5 gy-4">
-                            <div class="col-lg-3 col-md-6 rounded bg-sec text-success text-center px-1">
-                                <p class="fs-4 text-success fw-bold pt-2">
+                            <div class="col-lg-4 col-md-6 rounded bg-sec text-success text-center px-1">
+                                <p class="fs-5 text-success fw-bold pt-3 px-1">
                                     2017 - Present
                                 </p>
                                 <h6>✓Classroom Teacher (Chemistry and Basic Science):</h6>
@@ -139,7 +139,7 @@
                 <div class="col-lg-8 py-3">
                     <div class="card rounded-3 shadow p-5">
                         <div class="row justify-content-center align-items-center gx-5 gy-4">
-                            <div class="col-lg-3 col-md-6 rounded bg-sec text-success text-center px-1">
+                            <div class="col-lg-4 col-md-6 rounded bg-sec text-success text-center px-1">
                                 <p class="fs-4 text-success fw-bold pt-2">
                                     2017 - Present
                                 </p>
@@ -167,9 +167,9 @@
     <!-- Skill section -->
     <section class="mt-5 pt-3">
         <h2 class="text-success text-center fw-bold">Skills</h2>
-        <div class="container pb-5">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-lg-3 col-md-6">
+        <div class="container shadow rounded pb-5 ">
+            <div class="row align-items-center justify-content-center px-4">
+                <div class="col-lg-6 col-md-6">
                     <div class="d-flex justify-content-around">
                         <p class="mb-0 mt-5 fw-bold">
                             Administrative/secretarial tasks<!-- PA, and .-->
@@ -183,7 +183,7 @@
                         <div class="progress-bar bg-success fs-3 py-5" style="width: 95%">95%</div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="d-flex justify-content-around">
                         <p class="mb-0 mt-5 fw-bold">
                             Communication skills written and verbal<!-- PA, and .-->
@@ -197,7 +197,7 @@
                         <div class="progress-bar bg-success fs-3 py-5" style="width: 85%">85%</div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="d-flex justify-content-around">
                         <p class="mb-0 mt-5 fw-bold">
                             Computers and Microsoft Office suite.<!-- PA, and .-->
@@ -211,7 +211,7 @@
                         <div class="progress-bar bg-success fs-3 py-5" style="width: 80%">80%</div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="d-flex justify-content-around">
                         <p class="mb-0 mt-5 fw-bold">
                             Industrial training in Proximate analysis, Water analysis, and Bio-ethanol
@@ -232,24 +232,24 @@
 
     <!-- education -->
     <section>
-        <div class="container-fluid">
+        <div class="container-fluid mt-5">
             <h2 class="text-success text-center fw-bold">Education</h2>
             <div class="row justify-content-center">
                 <div class="col-lg-8 py-3">
                     <div class="card rounded-3 shadow p-5">
                         <div class="row justify-content-center align-items-center gx-5 gy-4">
-                            <div class="col-lg-3 col-md-6 rounded bg-sec text-light text-center px-1">
+                            <div class="col-lg-5 col-md-6 rounded bg-sec text-light text-center px-1">
                                 <p class="fs-4 text-success fw-bold pt-2">
                                     (B.Sc) in Education <br>(2021).
                                 </p>
-                                <p class="fs-4 text-success fw-bold pt-2">
+                                <p class="fs-5 text-success fw-bold pt-2">
                                     (B.Sc) in Applied Biochemistry (2014).
                                 </p>
                                 <p class="fs-4 text-success fw-bold pt-2">
                                     (SSCE) 2006.
                                 </p>
                             </div>
-                            <div class="col-lg-8 col-md-6">
+                            <div class="col-lg-7 col-md-6">
                                 <ul>
                                     <li>Bachelor of Science(B.Sc)in Education (2021): Enugu State University of Science
                                         and Technology (ESUT).
